--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -8,6 +8,7 @@
   "navLibrary": "Library",
   "navMeta": "Meta",
   "navFoundation": "Foundation",
+  "navTimeline": "Timeline",
   "navServices": "Services",
   "navContact": "Contact",
   "navResume": "Résumé",
