--- a/lib/l10n/app_ms.arb
+++ b/lib/l10n/app_ms.arb
@@ -8,6 +8,7 @@
   "navLibrary": "Perpustakaan",
   "navMeta": "Meta",
   "navFoundation": "Asas",
+  "navTimeline": "Garis Masa",
   "navServices": "Perkhidmatan",
   "navContact": "Hubungi",
   "navResume": "Resume",
