--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -8,6 +8,7 @@
   "navLibrary": "资料库",
   "navMeta": "元信息",
   "navFoundation": "基础",
+  "navTimeline": "时间线",
   "navServices": "服务",
   "navContact": "联系",
   "navResume": "履历",
