--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -6,7 +6,8 @@
   "navBlog": "Blog",
   "navLabs": "Labs",
   "navLibrary": "Library",
-  "navMeta": "Meta",
+  "navDiscover": "Discover",
+  "navPhilosophy": "Philosophy",
   "navFoundation": "Foundation",
   "navTimeline": "Timeline",
   "navServices": "Services",
