--- a/lib/l10n/app_ms.arb
+++ b/lib/l10n/app_ms.arb
@@ -6,7 +6,8 @@
   "navBlog": "Blog",
   "navLabs": "Makmal",
   "navLibrary": "Perpustakaan",
-  "navMeta": "Meta",
+  "navDiscover": "Teroka",
+  "navPhilosophy": "Falsafah",
   "navFoundation": "Asas",
   "navTimeline": "Garis Masa",
   "navServices": "Perkhidmatan",
