--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -6,7 +6,8 @@
   "navBlog": "博客",
   "navLabs": "实验室",
   "navLibrary": "资料库",
-  "navMeta": "元信息",
+  "navDiscover": "发现",
+  "navPhilosophy": "理念",
   "navFoundation": "基础",
   "navTimeline": "时间线",
   "navServices": "服务",
