update for work section

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -66,5 +66,10 @@
   "workFilterAll": "All",
   "workFilterProjects": "Projects",
   "workFilterLabs": "Labs",
-  "workEmpty": "No items yet."
+  "workEmpty": "No items yet.",
+
+  "workFilterProducts": "Products",
+  "workProductsSectionTitle": "Products & Templates",
+  "workProductsSectionSubtitle": "Reusable tools, starter kits, and templates you can adopt in your own systems."
+
 }
