--- a/lib/l10n/app_ms.arb
+++ b/lib/l10n/app_ms.arb
@@ -2,7 +2,7 @@
   "@@locale": "ms",
   "@@last_modified": "Malay localization with full metadata",
 
-  "appTitle": "Portfolio Desmond Liew",
+  "appTitle": "Portfolio Saya",
   "@appTitle": {
     "description": "Application title shown in window title / browser tab."
   },
