--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -2,7 +2,7 @@
   "@@locale": "en",
   "@@last_modified": "en base with full metadata",
 
-  "appTitle": "Desmond Liew — Portfolio",
+  "appTitle": "My Portfolio",
   "@appTitle": {
     "description": "Application title shown in window title / browser tab."
   },
